# dbos-transact-rs

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md  ROADMAP.md
.github/workflows/: ci.yml  publish.yml
crates/dbos/: Cargo.toml
crates/dbos/migrations/: 10_add_notifications_pkey.sql  10_add_notifications_pkey_cockroach.sql  10_check_notifications_pkey_cockroach.sql  11_add_serialization_columns.sql  12_add_notifications_consumed.sql  13_add_application_versions.sql  14_add_pgsql_client_functions.sql  15_add_workflow_schedule_columns.sql  16_add_delay_until.sql  17_add_workflow_schedule_queue_name.sql  18_add_was_forked_from.sql  19_add_operation_outputs_completed_at_index.sql  1_initial_dbos_schema.sql  1_initial_dbos_schema_listen_notify.sql  20_set_function_search_path.sql  21_create_queues_table.sql  22_drop_forked_from_index.sql  23_create_partial_forked_from_index.sql  24_drop_parent_workflow_id_index.sql  25_create_partial_parent_workflow_id_index.sql  26_drop_executor_id_index.sql  27_create_partial_dedup_id_index.sql  28_drop_dedup_id_constraint.sql  28_drop_dedup_id_constraint_cockroach.sql  29_create_pending_index.sql  2_add_queue_partition_key.sql  30_create_failed_index.sql  31_drop_status_index.sql  32_create_in_flight_index.sql  33_add_rate_limited.sql  34_create_rate_limited_index.sql  35_drop_queue_status_started_index.sql  36_add_completed_at.sql  37_create_started_at_index.sql  38_set_enqueue_workflow_search_path.sql  38_update_enqueue_workflow.sql  39_create_streams_trigger.sql  3_add_workflow_status_index.sql  40_add_attributes.sql  4_add_forked_from.sql  (+5 more)
crates/dbos/src/: client.rs  config.rs  error.rs  lib.rs  serialize.rs  telemetry.rs
crates/dbos/src/db/: management.rs  migrate.rs  mod.rs  notifications.rs  queue.rs  status.rs  steps.rs  streams.rs
crates/dbos/src/runtime/: admin.rs  conductor.rs  context.rs  listener.rs  mod.rs  queue.rs  recovery.rs  registry.rs  scheduler.rs  step.rs  workflow.rs
crates/dbos/tests/: admin.rs  concurrency.rs  conductor.rs  cross_sdk_interop.rs  cross_sdk_serialization.rs  management.rs  notifications.rs  queues.rs  recovery.rs  scheduler.rs  streams.rs  telemetry.rs  workflows.rs
crates/dbos/tests/fixtures/: gen_ts_fixtures.mjs  ts_serialization.json
