[package]
name = "dbos"
description = "Durable, crash-resilient workflow execution backed by Postgres (DBOS Transact for Rust)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# Async runtime (used from M1 onward: migration runner, pools, background tasks).
tokio = { version = "1", features = ["full"] }
# Postgres access. Pin 0.8.x for sqlx::raw_sql (multi-statement migrations) + PgListener.
# Runtime queries only (no compile-time `query!` macros) so no DATABASE_URL is needed to build.
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "json",
    "uuid",
    "chrono",
    "macros",   # FromRow derive only — runtime queries, no compile-time DATABASE_URL needed
] }
# Serialization: serde_json::Value is the universal persistence boundary.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Timestamps (epoch-ms math, RFC3339 portable dates, scheduled-tick ids).
chrono = { version = "0.4", features = ["serde"] }
# DBOS_JSON native format = base64(serde_json).
base64 = "0.22"
# application_version = sha256(current_exe) -> lowercase hex.
sha2 = "0.10"
hex = "0.4"
# Password masking in key=value DSNs.
regex = "1"
# Structured logging (workflow/step/queue/recovery spans, listener reconnects).
tracing = "0.1"
# Workflow IDs, owner_xid (UUIDv4).
uuid = { version = "1", features = ["v4"] }
# CancellationToken + TaskTracker (drain in-flight workflows on shutdown).
tokio-util = { version = "0.7", features = ["rt"] }
# In-memory per-(queue,partition) worker-concurrency counters.
dashmap = "6"
# Jitter for queue polling intervals.
rand = "0.8"
# Cron schedule parsing (6-field seconds-first).
cron = "0.12"
# Conductor websocket client (wss via rustls + webpki roots).
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
# Install a default rustls crypto provider so `wss://` works at runtime.
rustls = { version = "0.23", default-features = false, features = ["ring"] }
# Admin HTTP server.
axum = "0.7"

# --- Optional: OpenTelemetry OTLP trace export (enable with feature = "telemetry"). ---
# Workflow/step `tracing` spans are always emitted; this feature adds a built-in OTLP exporter.
opentelemetry = { version = "0.30", optional = true }
opentelemetry_sdk = { version = "0.30", optional = true, features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.30", optional = true, features = ["http-proto", "reqwest-client"] }
tracing-opentelemetry = { version = "0.31", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter", "registry"] }

[features]
telemetry = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
    "dep:tracing-subscriber",
]

[dev-dependencies]
pretty_assertions = "1"
tokio = { version = "1", features = ["full", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Integration tests inspect the system DB directly.
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
] }
# Admin-server integration test HTTP client.
reqwest = { version = "0.12", default-features = false, features = ["json"] }
